--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .barra-navegacao{
     list-style: none;
-    color: #fff;
+    color: #f7fdff;
+    font-weight: bold;
     text-align: right;
     font-family:sans-serif;
     font-size: 18px;
@@ -20,7 +21,7 @@
     margin-bottom: 100px;
     min-width: auto;
     height: 920px;
-    background-image: -webkit-linear-gradient(25deg,  #f9f9f9 50%, #00a78e 50%);
+    background-image: -webkit-linear-gradient(25deg,  #f7fdff 50%, #0c3b76 50%);
 }
 
 /* ------------------------------------------------------ */
@@ -38,7 +39,7 @@
   }
   
   h2{
-    color: #00a78e;
+    color: #6a8d11;
     font-weight: 200;
   }
   
@@ -48,7 +49,7 @@
   
   /* --------BOTÃO---------- */
   .info{
-    background-color: #00a78e;
+    background-color: #6a8d11;
     height: 45px;
     width: 220px;
     border: none;
@@ -72,7 +73,7 @@
   }
 
   .foto img{
-    width: 540px;
+    width: 800px;
     height: 800px;
   }
   
