--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@
   #sobre{
     background-color: #d7d9db;
     height: 800px;
-    width: 1700px;
+    width: 100%;
+    line-height: 36px;
+    padding-left: 15%;
   }
 
   #sobre > img {
@@ -52,32 +54,22 @@
     height: 400px;
   }
 
-  #sobre{
-    line-height: 36px;
-    padding-left: 15%;
+  .progresso{
+    text-align: right;
+    padding-left: 10%;
+    margin-top: 10%;
+    margin-right: 40%;
+    margin-left: 22%;
+    display: block;
   }
 
-  .sobre-textos > p{
-    text-align: justify;
-    margin-right: 20%;
-    padding-left: 30%;
-    margin-top: -150px;
-
-  }
-
-  .sobre-textos h2{
-    font-weight: bolder;
-   letter-spacing: 8px;
-   margin-left: 5%;
-  }
-
-  .progresso label, progress{
+  /* .progresso label, progress{ */
     /* height: 800px;
     width: 700px;
     text-align: justify; */
-    margin-top: 50%;
+    /* margin-top: 50%;
   
-  }
+  } */
 
 
 
@@ -134,10 +126,6 @@
 
   }
 
-  .progresso{
-    text-align: right;
-    padding-left: 60%;
-  }
   /* -----------------TIPOGRAFIA ------------------- */
 
   .cinza{
@@ -155,4 +143,18 @@
 
   .container h1,p,h3{
     padding-top: 15px;
+  }
+
+  .sobre-textos > p{
+    text-align: justify;
+    margin-right: 20%;
+    padding-left: 30%;
+    margin-top: -150px;
+
+  }
+
+  .sobre-textos h2{
+    font-weight: bolder;
+   letter-spacing: 8px;
+   margin-left: 5%;
   }
