--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* ------------- BACKGROUND DIAGONAL ---------- */
 
+html {
+  scroll-behavior: smooth;
+}
+
 .background-linear {
   width: 100%;
   margin-bottom: 100px;
@@ -44,7 +48,7 @@
   #sobre{
     background-color: #d7d9db;
     height: 800px;
-    width: 100%;
+    width: 85%;
     line-height: 36px;
     padding-left: 15%;
   }
@@ -52,30 +56,62 @@
   #sobre > img {
     width: 400px;
     height: 400px;
+    margin-right: 2%;
+    margin-top: 3%;
   }
 
   .progresso{
     text-align: right;
-    padding-left: 10%;
+    padding-left: 5%;
     margin-top: 10%;
     margin-right: 40%;
     margin-left: 22%;
     display: block;
   }
 
-  /* .progresso label, progress{ */
-    /* height: 800px;
-    width: 700px;
-    text-align: justify; */
-    /* margin-top: 50%;
-  
-  } */
-
-
-
+  .margin-servicos{
+    margin-left: 30px;
+  }
+  /* ----------------- PÁGINA SERVIÇOS ------------------ */
   .servicos{
     background-color: #0c3b76;
     margin-top: 50px;
+    width: 100%;
+    height: 800px;
+    color: black;
+    text-align: center;
+    padding-top: 10px;
+  }
+
+  .quadrado-servicos{
+    width: 300px;
+    height: 300px;
+    border-radius: 6%;
+    background-color: #fff;
+    opacity: 0.3;
+    text-align: center;
+    display: inline-block;
+    margin-left: 50px;
+    margin-right: 130px;
+    margin-top: 50px;
+    position: relative;
+  }
+  
+  .quadrado-servicos::before {
+    content: '';
+    background-color: #6a8d11;
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    width: 100%;
+    height: 2px;
+    z-index: -1;
+    transition: all .3s ease-in-out;
+  }
+  
+  .quadrado-servicos:hover::before {
+    bottom: 0;
+    height: 100%;
   }
   
   /* --------BOTÃO---------- */
@@ -156,5 +192,5 @@
   .sobre-textos h2{
     font-weight: bolder;
    letter-spacing: 8px;
-   margin-left: 5%;
+   margin-left: 6%;
   }
