--- a/style.css
+++ b/style.css
@@ -100,11 +100,12 @@ html {
   .quadrado-servicos::before {
     content: '';
     background-color: #6a8d11;
+    border-radius: 5%;
     position: absolute;
     left: 0;
     bottom: 2px;
     width: 100%;
-    height: 2px;
+    height: 1px;
     z-index: -1;
     transition: all .3s ease-in-out;
   }
